sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:11: error: not found: value ainverse
        ainverse = true
        ^