sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut = 0
  var fin = getNombreValeurs()
  var aInverse = true
  while (aInverse) {
    aInverse = false
    for (i <- debut to fin) {
      if (getValeur(i+1) < getValeur(i)) {
        echange(i+1,i)
        ainverse = true
        fin -= 1
      }
    }
    for (j <- fin to debut by -1) {
      if (getValeur(j+1) < getValeur(j)) {
        echange(j+1,j)
        aInverse = true
        debut += 1
      }
    }
  }
}
